--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.8</source>
-
+                        <goal>test</goal>
                     <target>1.8</target>
                 </configuration>
             </plugin>
